--- a/pom.xml
+++ b/pom.xml
@@ -121,8 +121,8 @@ under the License.
 								<excludes>
 									<exclude>org.apache.flink:force-shading</exclude>
 									<exclude>com.google.code.findbugs:jsr305</exclude>
-									<exclude>org.slf4j:*</exclude>
-									<exclude>log4j:*</exclude>
+									<!--<exclude>org.slf4j:*</exclude>
+									<exclude>log4j:*</exclude>-->
 								</excludes>
 							</artifactSet>
 							<filters>
@@ -140,6 +140,11 @@ under the License.
 							<transformers>
 								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 									<mainClass>org.myorg.quickstart.StreamingJob</mainClass>
+								</transformer>
+
+								<!-- append default configs -->
+								<transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+									<resource>reference.conf</resource>
 								</transformer>
 							</transformers>
 						</configuration>
